--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,29 @@
         padding: 5px 10px 5px 10px;
         font-family: cursive,fantasy,sans-serif,serif,monospace;
       }
+      @media screen and (min-width: 400px) {
+        .containerof p{
+          font-size: 12px;
+        }
+        .output{
+          font-size: 12px;
+        }
+        .button{
+          font-size: 12px;
+        }
+      }
+
+      @media screen and (min-width: 800px) {
+        .containerof p{
+          font-size: 15px;
+        }
+        .output{
+          font-size: 15px;
+        }
+        .button{
+          font-size: 15px;
+        }
+      }
     </style>
   </head>
           {% extends 'layout.html' %}
