--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<!--      <meta name="viewport" content="width=device-width, initial-scale=1.0">  -->
     <title>PyDictionary</title>
     <style media="screen">
       body{
@@ -66,7 +66,7 @@
         padding: 5px 10px 5px 10px;
         font-family: cursive,fantasy,sans-serif,serif,monospace;
       }
-      @media screen and (min-width: 400px) {
+      @media screen and (min-width: 800px) {
         .containerof p{
           font-size: 12px;
         }
@@ -78,7 +78,7 @@
         }
       }
 
-      @media screen and (min-width: 800px) {
+      @media screen and (min-width: 1080px) {
         .containerof p{
           font-size: 15px;
         }
