--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         /* padding: 4rem; */
         min-height: calc(100vh - 60px);
         padding-bottom: 0;
-        vertical-align: middle;;
+        vertical-align: middle;
         padding-top: 20px;
         /* margin-top: 90px; */
         width: 100%;
@@ -66,7 +66,7 @@
         padding: 5px 10px 5px 10px;
         font-family: cursive,fantasy,sans-serif,serif,monospace;
       }
-      @media screen and (min-width: 800px) {
+/*       @media screen and (min-width: 800px) {
         .containerof p{
           font-size: 12px;
         }
@@ -88,7 +88,7 @@
         .button{
           font-size: 15px;
         }
-      }
+      } */
     </style>
   </head>
           {% extends 'layout.html' %}
