--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
         font-family: cursive,fantasy,sans-serif,serif,monospace;
         text-align: left;
         padding-left: 20%;
+        padding-right: 5%;
       }
       span{
         color: skyblue;
